infrastructure/prod/nj/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.cilium.io/loadbalancer-mode: shared
    ingress.cilium.io/force-https: "disabled"
    ingress.cilium.io/secure-backends: "false" # Force Cilium to treat the backend as plain HTTP
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - longhorn.smotra.net
    secretName: longhorn-ingress
  namespace: longhorn-system
  rules:
  - host: longhorn.smotra.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
